# pyscoppy

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HARDWARE.md  PROTOCOL.md  README.md  pyproject.toml  pyrightconfig.json  pyscoppy.code-workspace  renovate.json  run-checks.sh  run-daemon.sh  run-gui.sh  run.py
.gitea/default_merge_message/: MERGE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
pyscoppy/: __init__.py  __main__.py  cli.py  client.py  daemon.py  dclient.py  protocol.py  serial_port.py  webgui.py
pyscoppy/web/: app.css  app.js  index.html
tests/: test_protocol.py
